# dmt-eval

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml  system.md
.guardian/: identity  identity.yaml
.guardian/substrates/: claude.yaml  gemini.yaml
bench/: Dockerfile  app.py  brainscore_cache.py  requirements.txt
codev/: 00-document-builder.org  01-weather-scenario.org  02-agent-evaluation.org  03-live-agent-test.org  04-live-llm-agent.org  05-tournament.org  06-structured-output.org  07-schema-validation.org  08-brainscore-installation.org  09-brainscore-plugins.org  10-brainscore-model-commitment.org  11-brainscore-benchmarks.org  12-brainscore-data-assembly.org  13-bench-service.org  14-equity-forecasting.org
develop/: dmt-for-ai-agents.org  project-charter.org
scripts/: run_live_agent.py  run_live_test.sh  run_tournament.py  run_tournament.sh  simulated_agent.py
src/dmt/: __init__.py  adapter.py  cli.py  evaluate.py  mcp_server.py  measurement.py
src/dmt/agent/: __init__.py  brief.py  grader.py  llm_runner.py  runner.py  tournament.py  verdict.py
src/dmt/document/: __init__.py  builder.py  renderer.py
test/: conftest.py  test_builder.py  test_cli.py  test_drug_efficacy.py  test_equity_scenario.py  test_live_agent.py  test_llm_agent.py  test_llm_scenario.py  test_mcp_server.py  test_schema_validation.py  test_structured_output.py  test_tournament.py  test_weather_regression.py  test_weather_scenario.py
test/brainscore/: test_compat.py  test_interface.py  test_plugin.py  test_registry.py
(+32 files in other folders)
