[project]
name = "dmt-eval"
version = "0.0.1"
description = "Data, Models, Tests — universal validation framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
    { name = "Vishal Sood", email = "vishal.sood@mayalucia.org" },
]
keywords = ["evaluation", "validation", "testing", "scientific", "reports"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "jinja2>=3.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
llm = ["openai", "anthropic"]
weather = ["xarray", "xskillscore"]
dev = ["pytest>=8.0", "ruff"]

[project.urls]
Homepage = "https://github.com/mayalucia/dmt-eval"
Repository = "https://github.com/mayalucia/dmt-eval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmt"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
markers = ["llm: tests that call live LLM APIs (require API key)"]

[tool.ruff]
src = ["src"]
line-length = 88
